--- a/skills/csharp/experimental/bingsearchskill/Responses/CommonStrings.fr.resx
+++ b/skills/csharp/experimental/bingsearchskill/Responses/CommonStrings.fr.resx
@@ -129,4 +129,7 @@
   <data name="View" xml:space="preserve">
     <value>Vue</value>
   </data>
+  <data name="DontKnowAnswer" xml:space="preserve">
+    <value>Désolé, je ne connais pas encore cette réponse.</value>
+  </data>
 </root>
