--- a/skills/csharp/experimental/bingsearchskill/Responses/CommonStrings.it.resx
+++ b/skills/csharp/experimental/bingsearchskill/Responses/CommonStrings.it.resx
@@ -129,4 +129,7 @@
   <data name="View" xml:space="preserve">
     <value>vista</value>
   </data>
+  <data name="DontKnowAnswer" xml:space="preserve">
+    <value>Mi dispiace non conosco ancora questa risposta.</value>
+  </data>
 </root>
