move bing site url to common string

--- a/skills/csharp/experimental/bingsearchskill/Responses/CommonStrings.de.resx
+++ b/skills/csharp/experimental/bingsearchskill/Responses/CommonStrings.de.resx
@@ -132,4 +132,7 @@
   <data name="DontKnowAnswer" xml:space="preserve">
     <value>Entschuldigung, ich kenne diese Antwort noch nicht.</value>
   </data>
+  <data name="BingSite" xml:space="preserve">
+    <value>https://www.bing.com</value>
+  </data>
 </root>
