--- a/skills/csharp/experimental/bingsearchskill/Responses/CommonStrings.fr.resx
+++ b/skills/csharp/experimental/bingsearchskill/Responses/CommonStrings.fr.resx
@@ -132,4 +132,7 @@
   <data name="DontKnowAnswer" xml:space="preserve">
     <value>Désolé, je ne connais pas encore cette réponse.</value>
   </data>
+  <data name="BingSite" xml:space="preserve">
+    <value>https://www.bing.com</value>
+  </data>
 </root>
